static/css/styles.css
/* ... */
.sec-round .full-height {
  height: 100%;
}
.sec-round .round-item:first-child {
  border-left: 1px solid rgba(153, 153, 153, 0.11);
}
.sec-round .round-item {
  float: left;
  width: 20%;
  height: 100%;
  box-sizing: border-box;
  border-right: 1px solid rgba(153, 153, 153, 0.11);
  height: 100%;
  position: relative;
}

/*---------------------------------
* 05. Header
-----------------------------------*/
.header-nav {
  top: 10px;
	padding: 15px 10px;
	-webkit-transition: all 0.2s ease;
	   -moz-transition: all 0.5s ease;
	   	 -o-transition: all 0.2s ease;
			    transition: all 0.2s ease;
}
.header-nav .navbar-toggler span {
  background: #fff;
}

.header-nav .navbar-brand {
  margin-left: 8rem;
	color: #fff;
	font-weight: 800;
	position: relative;
  font-size: 23px;
}
.header-nav .navbar-brand span {
	 width: 6px;
    height: 6px;
    border-radius: 50%;
    position: absolute;
    bottom: 12px;
    right: -9px;
    float: left;
}
.header-nav .navbar-nav > li {
	margin: 0 0 0 20px;
}
.header-nav .navbar-nav .nav-link {
  position: relative;
  padding: 0;
  display: inline-block;
  font-size: 12px;
  vertical-align: top;
  color: #ececec;
  font-weight: 300;
  text-transform: uppercase;
  letter-spacing: 0.215em;
}
.header-nav .navbar-nav .nav-link:after {
	content: '';
	position: absolute;
	z-index: 10;
	width: 0;
  left: 0;
  right: 0;
  bottom: -5px;
  margin: auto;
	height: 1px;
	background: #fff;
	-webkit-transition: ease all 0.2s;
	   -moz-transition: ease all 0.2s;
		 -o-transition: ease all 0.2s;
			transition: ease all 0.2s;
	
}
.header-nav .navbar-nav .nav-link:hover:after,
.header-nav .navbar-nav .nav-link.active:after {
	width: 75%;
}

/*Navbar Toogle*/
.navbar-toggler {
  border: none;
  padding: 10px 6px;
  outline: none !important;
}
.navbar-toggler span {
  display: block;
  width: 22px;
  height: 2px;
  border-radius: 1px;
  background: #fff;
}
.navbar-toggler span + span {
  margin-top: 4px;
  width: 18px;
}
.navbar-toggler span + span + span {
  width: 10px;
}
/**/


.header-nav.fixed-header {
  top: 0;
  margin-top: 0;
  padding: 12px 10px;
  background: #111;
  box-shadow: 0px 1px 27px -3px rgba(0, 0, 0, 0.2);
}


@media (max-width: 991px){

  .header-nav {
    top: 0;
    padding:10px 15px;
  }
  .header-nav.fixed-header {
    padding:10px 15px;
  }
  .navbar-nav {
    padding-top: 5px;
  }
  .header-nav .navbar-nav > li {
    margin: 8px 0;
  }
  .header-nav .navbar-nav .nav-link {
    padding: 0;
  }
}

/*---------------------------------
* 06. Header option 2
-----------------------------------*/


.header-nav-white .navbar-nav .nav-link {
  color: #333;
  font-weight: 600;
}
.header-nav-white .navbar-nav .nav-link:after {
  background: #333;
}
.header-nav-white .navbar-brand {
  color: #333;
}

.header-nav-white.fixed-header {
  background: #fff;
}

.header-nav-white .move-name {
  margin-left: 1rem;
  -webkit-transition-property: margin-left;
    -webkit-transition-duration: 2s;
    /* Standard syntax */
    transition-property: margin-left;
    transition-duration: 2s;
}

.header-nav-white .navbar-toggler span {
  background: #333;
}


/*---------------------------------
* 06. Home Banner
-----------------------------------*/
.full-screen {
  min-height: 100vh;
}

.home-banner {
  position: relative;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: right center;
  -webkit-background-size: cover;
     -moz-background-size: cover;
       -o-background-size: cover;
          background-size: cover;
}

.home-banner .particles-js-canvas-el {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.4
}

.home-banner .home-text-center {
  position: relative;
  padding-left: 45px;
  z-index: 1;
}
.home-banner .home-text-center:after {
  width: 5px;
  left: 1px;
  top: 5px;
  bottom: 0;
  content: "";
  position: absolute;
}

.home-banner h4 {
  font-size: 20px;
  color: #fff;
  margin: 0 0 5px;
}
.home-banner h5 {
  font-size: 65px;
  font-weight: 700;
  color: #fff;
  margin:0 0 15px;
}
.home-banner p {
  width: 600px;
  max-width: 100%;
  font-weight: 400;
  font-size: 18px;
  padding: 0 0 35px;
  color: #fff;
  margin: 0;
}

.home-banner .m-btn { min-width: 140px; margin-right: 10px; text-align: center; }

@media (max-width: 991px){

}
@media (max-width: 767px){
  .home-banner .home-text-center {
    padding-left: 25px;
  }
  .home-banner .home-text-center:after {
    width: 3px;
  }
  .home-banner h4 {
    font-size: 16px;
    color: #fff;
    margin: 0 0 5px;
  }
  .home-banner h5 {
    font-size: 36px;
    margin: 0 0 10px;
  }
  .home-banner p {
    font-size: 14px;
    padding: 0 0 20px;
  }
  .home-banner .m-btn-link {
    font-size: 13px;
  }
}

/*-----------------------------------------
*  Home Banner
-----------------------------------------*/
.home-banner-01 {
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  -webkit-background-size: cover;
     -moz-background-size: cover;
       -o-background-size: cover;
          background-size: cover;
}

.home-banner-01 h4 {
  font-size: 25px;
  color: #222;
  margin: 0 0 10px;
}
.home-banner-01 h5 {
  font-size: 65px;
  font-weight: 700;
  color: #222;
  margin:0 0 20px;
}
.home-banner-01 p {
  width: 600px;
  max-width: 100%;
  font-weight: 400;
  font-size: 18px;
  padding: 0 0 35px;
  color: #222;
  margin: 0;
}

.home-banner-01 .m-btn {
  min-width: 160px;
  margin: 8px;
}

@media (max-width: 767px){
  .home-banner-01 .home-text-center:after {
    width: 3px;
  }
  .home-banner-01 h4 {
    font-size: 16px;
    margin: 0 0 5px;
  }
  .home-banner-01 h5 {
    font-size: 36px;
    margin: 0 0 10px;
  }
  .home-banner-01 p {
    font-size: 14px;
    padding: 0 0 20px;
  }
  .home-banner-01 .m-btn-link {
    font-size: 13px;
  }
}
/* ... */

